--- a/frontend/portfolio/src/style.css
+++ b/frontend/portfolio/src/style.css
@@ -34,6 +34,12 @@
     body {
         @apply flex-center bg-bg;
     }
+    form {
+        @apply w-1/3;
+    }
+    button {
+        @apply bg-info rounded-md;
+    }
     #root {
         @apply flex-center w-full flex-col;
     }
@@ -51,6 +57,9 @@
     }
     .card:hover {
         @apply bg-bg-light border-highlight;
+    }
+    .input-field {
+        @apply border-border-muted rounded-md border-2 p-2.5;
     }
 }
 
