--- a/frontend/portfolio/src/style.css
+++ b/frontend/portfolio/src/style.css
@@ -28,6 +28,9 @@
     h2 {
         @apply text-[min(6vw,28px)] font-semibold;
     }
+    h3 {
+        @apply text-[min(5vw,18px)] font-semibold;
+    }
     section {
         @apply bg-bg border-b-highlight h-1/2 w-full rounded-b-md border-b-3 p-[min(6vw,40px)];
     }
@@ -35,7 +38,10 @@
         @apply flex-center bg-bg;
     }
     form {
-        @apply w-1/3;
+        @apply flex-center w-full flex-col gap-2.5 lg:w-1/2;
+    }
+    label {
+        @apply mr-auto;
     }
     button {
         @apply bg-info rounded-md;
@@ -59,10 +65,17 @@
         @apply bg-bg-light border-highlight;
     }
     .input-field {
-        @apply border-border-muted rounded-md border-2 p-2.5;
+        @apply border-border-muted w-full rounded-md border-2 p-2.5;
+    }
+    .social-media {
+        @apply mb-2.5 flex gap-2.5;
     }
 }
 
 @utility flex-center {
     @apply flex items-center justify-center;
+}
+
+@utility project-card {
+    @apply flex h-[min(40vw,240px)] w-full items-end justify-center;
 }
