--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -77,7 +77,7 @@
 }
 
 @utility project-card {
-    @apply flex h-[min(40vw,240px)] w-full items-end justify-center;
+    @apply flex h-[min(40vw,240px)] w-full items-end justify-center border-3 border-border-muted hover:border-highlight rounded-md;
 }
 
 @utility linearGradient-180 {
@@ -94,6 +94,10 @@
 
 @utility modal-close {
     @apply hidden translate-x-full;
+}
+
+@utility card-background {
+    @apply bg-linear-to-b from-white-500 to-black-500;
 }
 
 /* Modal animations */
